# bridging_index

./: LICENSE  README.md
code/: CMakeLists.txt  calculate.cpp  calculate.h  dateConverse.cpp  dateConverse.h  filename.txt  getFileName.cpp  getFileName.h  getIDbyNum.cpp  getIDbyNum.h  main.cpp  map.cpp  map.h
code/sample/: coauthor_covid_2020-05-01_co_5.txt
